[project]
name = "lev.austfish.host_scan"
version = "0.1.1"
description = ""
dynamic = ["classifiers"]
requires-python = ">=3.10"
dependencies = [
    "levrt~=1.3",
    "lev.maimai.oneforall>=0.1.9",
]

[[project.authors]]
name = "austfish"
email = "820668680@qq.com"

[project.license]
text = "MIT"

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"

[tool.pdm]
editable-backend = "path"
includes = ["lev"]

[[tool.pdm.source]]
name = "levhub"
url = "https://__token__:${LEVHUB_TOKEN}@pypi.lev.zone/simple/"
